--- a/app/templates/transport.html
+++ b/app/templates/transport.html
@@ -46,7 +46,7 @@
                     <div class="col-md-12">
                         <label class="form-label" >Vehicle Number </label>
                         <input type="text" class="form-control" id="vehicle_number" name="vehicle_number"
-                            placeholder="Enter Vehicle Number" maxlength="100" minlength="3">
+                            placeholder=" Enter Vehicle number" maxlength="100" minlength="3">
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -61,7 +61,7 @@
                 <div class="col-md-12">
                     <label for="transport_name" class="form-label">Route</label>
                     <input type="text" class="form-control" id="transport_name" name="transport_name"
-                        placeholder="Enter Route Name" maxlength="1000" minlength="3">
+                        placeholder="Enter Route name" maxlength="1000" minlength="3">
                 </div>
             </div>
             <div class="modal-footer">
@@ -94,7 +94,7 @@
                         <tr class="tr-transport-{{transport.transport_id}}">
                             <td>{{forloop.counter}}</td>
                             <td class=" text-break vehicle_number">{{transport.vehicle_number}}</td>
-                            <td class=" text-break vehicle_details ">{{transport.vehicle_details}}</td>
+                            <td class=" text-break vehicle_details w-25">{{transport.vehicle_details}}</td>
                             <td class="register_date">{{transport.register_date}}</td>
                             <td class=" text-break transport_name">{{transport.transport_name}}</td>
                             <td>
@@ -195,7 +195,15 @@
                                 onclick="addMore(this)"><i class="bi bi-plus-circle"></i></button>
                             </div>
                             <div id="stopagesList">
-                            </div>
+                                <div class="row mt-2">
+                                    <div class="col-md-12 d-flex align-items-center"
+                                        id="stopage_id_${stopdata['stop_id']}">
+                                        <input type="text" class="form-control" value="hi">
+                                        <a href="#" onclick="deleteStoppage(this)"
+                                            data-stop-id="${stopdata['stop_id']}"><i class="bi bi-trash3"
+                                                style="color: red; padding: 16px;"></i></a>
+                                    </div>
+                                </div> 
                             </div>
                         </div>
                     </div>
