--- a/app/templates/assignments.html
+++ b/app/templates/assignments.html
@@ -122,7 +122,7 @@
                 </tr>
                 {% endfor %}
                 {% else %}
-                <tr>
+                <tr class="" id="no_data_found">
                     <td colspan="9" class="text-center" id="no_data_found">
                         <img src="{% static 'img/no_data_found.png' %}" alt="No Data Found" class="no_data_found" id="no_data_found">
                     </td>
