--- a/app/templates/transport.html
+++ b/app/templates/transport.html
@@ -3,6 +3,8 @@
 {% block title %} Transport{% endblock %}
 
 {% block content %}
+<link href="{% static 'app-css/transport.css' %}" rel="stylesheet" />
+
 <div class="row" id="heading-row">
     <div class="col-sm-12 col-md-8 col-xl-8" style="padding: 1rem">
         <h5>Transportation</h5>
@@ -40,7 +42,7 @@
                     </div>
                 </div>
                 <div class="d-flex mt-2">
-                    <input type="hidden" name="id" id="id">
+                    <input type="hidden" name="transport_id" id="id">
                     <div class="col-md-12">
                         <label class="form-label" >Vehicle Number </label>
                         <input type="text" class="form-control" id="vehicle_number" name="vehicle_number"
@@ -65,63 +67,75 @@
             <div class="modal-footer">
                 <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal"><i
                         class="ri-close-line me-1 align-middle"></i> Close</a>
-                <button type="button" class="btn btn-primary" id="saveBtn" name="saveBtn">Save Transport</button>
+                <button type="button" class="btn btn-primary" id="saveBtn" name="saveBtn">Save</button>
             </div>
         </div>
     </div>
 </div>
-
 <div class="row">
-    <div class="col-md-12">
-            <table class="table table-striped table-hover table-sticky table_students">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>S.NO</th>
-                        <th>Vehicle Number</th>
-                        <th>Vehicle Details</th>
-                        <th>Date of Register</th>
-                        <th>Route Name</th>
-                        <th>Stoppage</th>
-                        <th>Students</th>
-                        <th>Staffs</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody class="tbl__bdy" id="transport_details">
+    <div class="col-md-12 text-center">
+        <table class="table table-striped table-hover table-sticky table_students">
+            <thead class="thead-dark">
+                <tr>
+                    <th>S.NO</th>
+                    <th>Vehicle Number</th>
+                    <th>Vehicle Details</th>
+                    <th>Date of Register</th>
+                    <th>Route Name</th>
+                    <th>Stoppage</th>
+                    <th>Students</th>
+                    <th>Staffs</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody class="tbl__bdy" id="transport_details">
+                {% if transportation %}
                     {% for transport in transportation %}
-                    <tr class="tr-transport-{{transport.transport_id}}">
-                        <td>{{forloop.counter}}</td>
-                        <td class="vehicle_number">{{transport.vehicle_number}}</td>
-                        <td class="vehicle_details w-25">{{transport.vehicle_details}}</td>
-                        <td class="register_date">{{transport.register_date}}</td>
-                        <td class="transport_name">{{transport.transport_name}}</td>
-                        <td>
-                            <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"
-                                data-bs-target="#stopFormModal"
-                                onclick="openstopDetails('stopForm','{{ transport.transport_name }}','{{transport.transport_id}}')"
-                                data-id="{{transport.transport_id}}">View</button>
-                        </td>
-                        <td>
-                        <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  data-bs-target="#studentModal" onclick="showStudentDetails(this)" data-trans-id="{{transport.transport_id}}">View</button>
-                        </td>
-                        <td>
-                            <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  data-bs-target="#staffModal" onclick="showStaffDetails(this)" data-trans-id="{{transport.transport_id}}">View</button>
+                        <tr class="tr-transport-{{transport.transport_id}}">
+                            <td>{{forloop.counter}}</td>
+                            <td class=" text-break vehicle_number">{{transport.vehicle_number}}</td>
+                            <td class=" text-break vehicle_details w-25">{{transport.vehicle_details}}</td>
+                            <td class="register_date">{{transport.register_date}}</td>
+                            <td class=" text-break transport_name">{{transport.transport_name}}</td>
+                            <td>
+                                <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"
+                                    data-bs-target="#stopFormModal"
+                                    onclick="openstopDetails('stopForm','{{ transport.transport_name }}','{{transport.transport_id}}')"
+                                    data-id="{{transport.transport_id}}">View</button>
                             </td>
-                        <td>
-                            <button type="button" class="btn  btn-sm btn-info btnEdit" id="btnEdit"
-                                data-id="{{transport.transport_id}}">
-                                <i class="bi bi-pencil-square"></i></button>
-                            <button type="button" class="btn btn-sm btn-danger btndelete" id="deleteButton"
-                                data-id="{{transport.transport_id}}">
-                                <i class="bi bi-trash3"></i></button>
-                        </td>
-                    </tr>
+                            <td>
+                                <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  
+                                    data-bs-target="#studentModal" onclick="showStudentDetails(this)"
+                                    data-trans-id="{{transport.transport_id}}">View</button>
+                            </td>
+                            <td>
+                                <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  
+                                    data-bs-target="#staffModal" onclick="showStaffDetails(this)"
+                                    data-trans-id="{{transport.transport_id}}">View</button>
+                            </td>
+                            <td>
+                                <button type="button" class="btn  btn-sm btn-info btnEdit" id="btnEdit"
+                                    data-id="{{transport.transport_id}}">
+                                    <i class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-sm btn-danger btndelete" id="deleteButton"
+                                    data-id="{{transport.transport_id}}">
+                                    <i class="bi bi-trash3"></i></button>
+                            </td>
+                        </tr>
                     {% endfor %}
-                </tbody>
-            </table>
+                {% else %}
+                <tr>
+                    <td colspan="9" class="text-center" id="no_data_found">
+                        <img src="{% static 'img/no_data_found.png' %}" alt="No Data Found" class="no_data_found" id="no_data_found">
+                    </td>
+                </tr>
+            {% endif %}
+            </tbody>
+        </table>
     </div>
 </div>
 <!-- Student form -->
+
 <div class="modal fade" tabindex="-1" id="studentModal">
     <div class="modal-dialog modal-md">
         <div class="modal-content" id="studentformModal">
@@ -132,10 +146,13 @@
                 <div class="modal-body">
                     <div class="d-flex gap-2">
                         <input type="text" class="form-control" placeholder="Enter Roll Number" id="roll_number">
-                        <button type="button" class="btn btn-success btn-sm rounded-pill" id="trns-std-id" data-transport-id="" onclick="fetchStudentDetails(this)">Assign</button>
+                            <button type="button" class="btn btn-success btn-label rounded-pill right assign" 
+                            id="trns-std-id" data-transport-id="" onclick="fetchStudentDetails(this)">
+                             <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Assign
+                         </button>    
                     </div>
                     <div class="mt-2">
-                    <table class="table">
+                    <table class="table" id="studentAssignTable">
                         <thead class="thead-dark">
                             <tr>
                                 <tr>
@@ -178,15 +195,6 @@
                                 onclick="addMore(this)"><i class="bi bi-plus-circle"></i></button>
                             </div>
                             <div id="stopagesList">
-                                <div class="row mt-2">
-                                    <div class="col-md-12 d-flex align-items-center"
-                                        id="stopage_id_${stopdata['stop_id']}">
-                                        <input type="text" class="form-control" value="hi">
-                                        <a href="#" onclick="deleteStoppage(this)"
-                                            data-stop-id="${stopdata['stop_id']}"><i class="bi bi-trash3"
-                                                style="color: red; padding: 16px;"></i></a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -205,10 +213,13 @@
                 <div class="modal-body">
                     <div class="d-flex gap-2">
                         <input type="text" class="form-control" placeholder="Enter empolyee No" id="employee_id">
-                        <button type="button" class="btn btn-success btn-sm rounded-pill" id="trns-staff-id" data-transport-id="" onclick="fetchStaffDetails(this)">Assign</button>
+                            <button type="button" class="btn btn-success btn-label rounded-pill right assign" 
+                           id="trns-staff-id" data-transport-id="" onclick="fetchStaffDetails(this)">
+                            <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Assign
+                        </button>
                     </div>
                     <div class="mt-2">
-                    <table class="table">
+                    <table class="table" id="staffAssignTable">
                         <thead class="thead-dark">
                             <tr>
                                 <tr>
