--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -6,6 +6,7 @@
 
     <meta charset="utf-8">
     <title>Gurukul - {% block title %}School Automation{% endblock %}</title>
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Minimal Admin & Dashboard Template" name="description">
     <meta content="Themesbrand" name="author">
@@ -30,6 +31,9 @@
     <script src="{% static 'app-js/sweetalert.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    {% block js_module %}
+        
+    {% endblock js_module %}
 
 </head>
 <body class="dashboard-topbar-wrapper">
