--- a/app/templates/student_info.html
+++ b/app/templates/student_info.html
@@ -1,16 +1,20 @@
 
 {% extends '_layout.html' %}
+{% load static %}   
 {% block title %} Student Info {% endblock %}
-{% load static %}
+{% block js_module %}
+    <link href="https://cdn.datatables.net/v/bs5/dt-1.13.8/datatables.min.css" rel="stylesheet">
+    <script src="https://cdn.datatables.net/v/bs5/dt-1.13.8/datatables.min.js"></script>
+    <script src="{% static 'app-js/studentInfo.js' %}"></script>
+{% endblock js_module %}
 {% block content %}
-<script type="module" src="{% static 'app-js/utlity.js' %}"></script>
 <!-- Include FullCalendar JavaScript -->
-<script src="{% static 'app-js/studentInfo.js' %}"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
 <div class="row" id="heading-row">
-    <div class="col-sm-12 col-md-9 col-xl-11 d-flex align-items-center" style="padding: 1rem">
+    <div class="col-sm-12 col-md-9 col-xl-9 d-flex align-items-center" style="padding: 1rem">
         <a href="{% url 'students' %}">
             <i class="bi bi-arrow-left" style="font-size:1.5rem;"></i>
         </a>
@@ -18,7 +22,14 @@
             <h5>Student Information</h5>
         <quote>Students are the architects of their own tomorrows, shaping futures with every lesson learned.</quote>
         </div>
-        
+    </div>
+    <div class="col-sm-12 col-md-3 col-xl-3 d-flex align-items-center justify-content-end" style="padding: 1rem">
+        <a href="{% url 'edit_student' student_data.slug  %}"  class="btn btn-sm btn-info mx-3">
+            <i class="bi bi-pencil-square"></i>
+        </a>
+        <a href="#" data-student-id="{{student.student_id}}" class="btn btn-sm btn-danger ">
+            <i class="bi bi-trash3"></i>
+        </a>
     </div>
 </div>
 <input type="hidden" id="studentInfo" value='{"classId":{{student_data.class_id}}, "sectionId":{{student_data.section_id}}, "studentId":{{student_data.student_id}}}' />
@@ -311,7 +322,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <h6>UpComing Exams</h6>
-                                        <table id="attendanceTable" class="table table-striped table-hover table-sticky table_students table-center">
+                                        <table id="UpComingExamTable" class="table table-striped table-hover table-sticky table_students table-center">
                                             <thead class="thead-dark">
                                                 <tr>
                                                     <th>Exam Name</th>
@@ -333,7 +344,7 @@
                                     </div>
                                     <div class="col-md-12">
                                         <h6>Past Exams</h6>
-                                        <table id="attendanceTable" class="table table-striped table-hover table-sticky table_students table-center">
+                                        <table id="pastExamTable" class="table table-striped table-hover table-sticky table_students table-center">
                                             <thead class="thead-dark">
                                                 <tr>
                                                     <th>Exam Name</th>
@@ -382,28 +393,77 @@
                         </div>
                         <div class="tab-pane" id="fee" role="tabpanel">
                             <h6>Fees structure configuration of this class</h6>
+                            <blockquote>Fees for Success, Investments for Tomorrow</blockquote>
                             <div class="mb-0">
-                                dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12 text-center">
-                                    {% if transport_data %}
-                                    {% else %}
-                                        <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
-                                    {% endif %}
+                                    <div class="col-md-3">
+                                        <label for="total_fee" class="form-label">Total Fee</label>
+                                        <input type="number" name="" id="total_fee" class="form-control">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label for="admission_fee" class="form-label">Admission Fee</label>
+                                        <input type="number" name="" id="admission_fee" class="form-control">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label for="total_insta_amount" class="form-label">Total Installment Amount</label>
+                                        <input type="number" name="" id="total_insta_amount" class="form-control">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label for="no_of_installment" class="form-label">No. of Installment</label>
+                                        <input type="number" name="" id="no_of_installment" class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="installment_type" class="form-label">Installment Type</label>
+                                        <select name="" id="" class="form-select">
+                                            <option value="">Select Installment Type</option>
+                                            <option value="Monthly">Monthly</option>
+                                            <option value="Quarterly">Quarterly</option>
+                                            <option value="Half Yearly">Half Yearly</option>
+                                            <option value="Yearly">Yearly</option>
+                                        </select>
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="row">
+                                    <div class="col-md-12" id="feeDynamic"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="tab-pane" id="activites" role="tabpanel">
-                            <h6>Activites</h6>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h6>Activites</h6>
+                                    <blockquote>Ignite Passion through Innovative Activities</blockquote>
+                                </div>
+                                <div class="col-md-6">
+                                    <button type="button"  data-bs-toggle="modal"
+                                        data-bs-target="#activityForm" class="btn btn-success btn-label rounded-pill right float-end">
+                                        <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Add Activity</button>
+                                </div>
+                            </div>
                             <div class="mb-0">
-                                dynamic code goes here
                                 <div class="row">
                                 <div class="col-md-12 text-center">
-                                    {% if transport_data %}
-                                    {% else %}
-                                        <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
-                                    {% endif %}
+                                    <table class="table table-striped table-hover table-sticky table_students table-center">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th>Title</th>
+                                                <th>Date</th>
+                                                <th>Details</th>
+                                                <th>Place</th>
+                                                <th>Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="activityTable">
+                                            {% if activites %}
+                                            {% else %}
+                                                <tr>
+                                                    <td colspan="5" class="text-center">
+                                                        <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
+                                                    </td>
+                                                </tr>
+                                            {% endif %}
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                             </div>
@@ -733,5 +793,77 @@
     </div>
 </div>
 <!-- Document PopModel -->
+<!-- model popupfor Activity -->
+<div class="modal fade bs-example-modal-md" id="activityForm" tabindex="-1" role="dialog" aria-labelledby="myMediumModalLabel">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content" id="activityFormArea">
+            <div class="modal-header">
+                <h6 class="modal-title">
+                    <span class="d-block">
+                        Activity
+                    </span>
+                    <span class="d-block">
+                        Discover, Play, and Thrive with Exciting Activities
+                    </span>
+                </h6>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" name="" id="activity_id">
+                <div class="row my-2">
+                    <div class="col-md-12">
+                        <label for="" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="activity_title" maxlength="100" minlength="3">
+                    </div>
+                </div>
+                <div class="row my-2">
+                    <div class="col-md-12">
+                        <label for="" class="form-label">Details</label>
+                        <textarea name="" id="activity_details" cols="15" rows="10" class="form-control" maxlength="500"></textarea>
+                    </div>
+                </div>
+                <div class="row my-2">
+                    <div class="col-md-6">
+                        <label for="" class="form-label">Date</label>
+                        <input type="date" class="form-control" id="activity_date">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="" class="form-label">Place</label>
+                        <input type="text" class="form-control" id="activity_place" maxlength="200">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="javascript:void(0);" class="btn btn-link link-success fw-medium" data-bs-dismiss="modal">
+                    <i class="ri-close-line me-1 align-middle"></i> Close
+                </a>
+                <button type="submit" class="btn btn-primary" id="btnActivityForm">
+                    Save
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- model popupfor Activity-->
+<!-- model popupfor Activity Detailse started -->
+<div class="modal fade bs-example-modal-md" id="activityDetailse" tabindex="-1" role="dialog" aria-labelledby="myMediumModalLabel">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content" id="activityDetailseArea">
+            <div class="modal-header">
+                <h4 class="modal-title">
+                    <p class="word-breake activityName"></p>
+                </h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                <p class="word-breake activityDetailse"></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- model popupfor Activity Detailse ended -->
+
 {% endblock %}
 
