Fees and Classes

--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -30,6 +30,12 @@
     <script src="{% static 'app-js/sweetalert.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+<!-- DataTables CSS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
+
+<!-- DataTables JS -->
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
 
 </head>
 <body class="dashboard-topbar-wrapper">
@@ -154,7 +160,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a href="#" class="nav-link menu-link"> <i class="bi bi-cash-coin"></i>
+                            <a href="/app/fees" class="nav-link menu-link"> <i class="bi bi-cash-coin"></i>
                                 <span data-key="t-file-manager">Fees</span> </a>
                         </li>
 
