--- a/assets/app-css/common.css
+++ b/assets/app-css/common.css
@@ -185,3 +185,15 @@ body{
     object-fit: scale-down !important;
     margin-top: 1rem;
 }
+div.dataTables_wrapper div.dataTables_info {
+    padding-top: .85em;
+    margin-right: 19rem;
+    max-width: 11rem;
+  }
+  div.dataTables_wrapper div.dataTables_length label {
+    font-weight: normal;
+    text-align: left;
+    white-space: nowrap;
+    margin-right: 29rem;
+    margin-top: 0.7rem;
+  }
