--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -150,12 +150,12 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link menu-link"> <i class="bi bi-card-heading"></i>
+                            <a href="{% url 'examination' %}"  class="nav-link menu-link"> <i class="bi bi-card-heading"></i>
                                 <span data-key="t-file-manager">Examinations</span> </a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="{% url "gradings" %}" class="nav-link menu-link"> <i class="bi bi-star-fill"></i>
+                            <a href="{% url 'gradings' %}" class="nav-link menu-link"> <i class="bi bi-star-fill"></i>
                                 <span data-key="t-file-manager">Gradings</span> </a>
                         </li>
                         
