--- a/app/templates/staff_info.html
+++ b/app/templates/staff_info.html
@@ -213,24 +213,6 @@
                 </div>     
               </div>
             </div> 
-
-            {% comment %} <div class="text-center">
-                  <div class="container">
-                      <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
-                  </div>
-              </div> {% endcomment %}
-            {% comment %} <div class="tab-pane" id="Calendar" role="tabpanel">
-                  <h6>Calendar</h6>
-                  <qoute>Consistent attendance breeds achievement.</qoute>
-                  <div class="mb-0 my-3">
-                      <div class="row">
-                          <div class="col-md-12">
-                              <h4>This is Calendar Tab</h4>
-                          </div>
-                      </div>
-                  </div>
-              </div> {% endcomment %}
-
             {% comment %} Attendance Tab {% endcomment %}
             <div class="tab-pane" id="attendance" role="tabpanel">
                   <h6>Attendance</h6>
@@ -260,7 +242,9 @@
                                       </table>
                                   </div>
                                   <div class="col-md-6 col-sm-12">
-                                      <canvas id="staffPieChart" class="pie-chart"></canvas>
+                                      <div class="d-flex justify-content-center">
+                                          <canvas id="staffPieChart" class=""></canvas>
+                                      </div>
                                   </div>
                               </div>
                           </div>
@@ -278,8 +262,8 @@
                         data-bs-target="#payroll_form" class="btn btn-success btn-label rounded-pill right float-end">
                         <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Add Payroll</button>
                 </div>
+                
                 <div class="row mx-0 my-2" id="parentRow">
-                 
                     <table class="table table-striped table-hover table-sticky" id="staffPayroll">
                       <thead class="thead-dark">
                         <tr>
@@ -294,7 +278,7 @@
                       </thead>
                       
                       <tbody class="tbl__bdy" id="payroll_detail">
-                        {% if payroll_data %}
+                        
                           {% for payroll in payroll_data %}
                           <tr class="tr-payroll-{{payroll.payroll_id}}">
                             <td class="payment_date">{{payroll.payment_date}}</td>
@@ -314,17 +298,9 @@
                           </td>
                           </tr>
                           {% endfor %} 
-                        {% else %}
-                        <tr class="no_data_found-tr">
-                            <td colspan="7" class="text-center">
-                                <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
-                            </td>
-                        </tr>
-                    {% endif %}
+                        
                       </tbody>
-                      
                     </table>
-                  
                 </div>
               </div>
             </div>
@@ -436,7 +412,7 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="myMediumModalLabel">
                     Save Payroll</h5>
-                <button type="button" class="btn-close btnCloseModal" data-bs-dismiss="modal" aria-label="Close">
+                <button type="button" class="btn-close btnCloseModel" data-bs-dismiss="modal" aria-label="Close">
                 </button>
             </div>
             <div class="modal-body">
@@ -491,7 +467,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="javascript:void(0);" class="btn btn-link link-success fw-medium btnCloseModal" data-bs-dismiss="modal"><i
+                <a href="javascript:void(0);" class="btn btn-link link-success fw-medium btnCloseModel" data-bs-dismiss="modal"><i
                         class="ri-close-line me-1 align-middle"></i> Close</a>
                 <button type="submit" class="btn btn-primary"  id="addPayrollForm">Save
                     changes</button>
