--- a/assets/app-css/common.css
+++ b/assets/app-css/common.css
@@ -185,15 +185,39 @@ body{
     object-fit: scale-down !important;
     margin-top: 1rem;
 }
-div.dataTables_wrapper div.dataTables_info {
-    padding-top: .85em;
-    margin-right: 19rem;
-    max-width: 11rem;
-  }
-  div.dataTables_wrapper div.dataTables_length label {
-    font-weight: normal;
-    text-align: left;
-    white-space: nowrap;
-    margin-right: 29rem;
-    margin-top: 0.7rem;
-  }
+#calenderTable {
+    border: 3px solid;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    border: 1px solid black;
+    background-color: rgb(244, 250, 223); 
+    margin-top: 1%;    
+    }
+    #column{
+        background-color:rgb(251 233 170);
+        height: 2.5rem;
+        border: 1px solid rgb(198, 212, 215);
+        text-align:center;
+    }
+  #tdData{
+    background-color: #fdf4d7;
+    border: 1px solid rgb(198, 212, 215);
+   }
+
+#calenderTable, #tableData {
+    padding: 12px;
+    background-color: whitesmoke; 
+    border: 3px solid;
+    border: 1px solid rgb(198, 212, 215);
+}
+
+#calenderTable,.rowData {
+    background-color: rgb(198, 212, 215);
+    text-align: center;
+}
+@media only screen and (max-width: 768px) {
+    table {
+        width: 90%;
+    }
+}
