--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -1,9 +1,7 @@
 {% load static %}
-
 <!doctype html>
 <html lang="en" data-layout="horizontal" data-sidebar="dark" data-sidebar-size="lg" data-preloader="disable"
     data-theme="creative" data-bs-theme="light">
-
     <meta charset="utf-8">
     <title>Gurukul - {% block title %}School Automation{% endblock %}</title>
    
@@ -31,6 +29,11 @@
     <script src="{% static 'app-js/sweetalert.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
+    <!-- DataTables JS -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
     {% block js_module %}
         
     {% endblock js_module %}
@@ -148,7 +151,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link menu-link"> <i class="bi bi-card-heading"></i>
+                            <a href="{% url 'examination' %}" class="nav-link menu-link"> <i class="bi bi-card-heading"></i>
                                 <span data-key="t-file-manager">Examinations</span> </a>
                         </li>
 
