--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -161,7 +161,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a href="#" class="nav-link menu-link"> <i class="bi bi-cash-coin"></i>
+                            <a href="{% url 'fees' %}" class="nav-link menu-link"> <i class="bi bi-cash-coin"></i>
                                 <span data-key="t-file-manager">Fees</span> </a>
                         </li>
 
