--- a/app/templates/transport.html
+++ b/app/templates/transport.html
@@ -74,7 +74,7 @@
 </div>
 <div class="row">
     <div class="col-md-12 text-center">
-        <table class="table table-striped table-hover table-sticky table_students">
+        <table class="table table-striped table-hover table-sticky table_students" id="transportTable">
             <thead class="thead-dark">
                 <tr>
                     <th>S.NO</th>
