--- a/assets/app-css/calendar.css
+++ b/assets/app-css/calendar.css
@@ -19,15 +19,10 @@ table {
    .mod{
     background-color: #fdf4d7;
    }
-   /* tr {
-    transition: all .2s ease-in;
-    cursor: pointer;
-} */
 
 td {
     padding: 12px;
     text-align: left;
-    /* border-bottom: 1px solid black; */
     background-color: whitesmoke; 
     border: 3px solid;
     border: 1px solid rgb(198, 212, 215);
@@ -41,15 +36,12 @@ td {
 }
 tr {
     background-color: rgb(198, 212, 215);
-    /* transform: scale(1.02);
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2); */
 }
 @media only screen and (max-width: 768px) {
     table {
         width: 90%;
     }
 }
- 
 .fields{
     display: flex;
     align-items: end;
@@ -87,4 +79,17 @@ tr {
 .no_data_found {
     display: block;
     margin: auto;
-  }
+}
+@media print{
+    .btn{
+    display:none;
+    }
+}
+
+
+
+
+
+
+
+
