--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -53,6 +53,7 @@
     <input type="hidden" name="" id="apiUrl" value='{{url}}'>
     <input type="hidden" name="" id="jwtToken" value='{{jwt_token}}'>
     <input type="hidden" name="" id="instituteId" value='{{institute_id}}'>
+    <input type="hidden" name="" id="subscriptionUrl" value='{{subscriptionUrl}}'>
     {% csrf_token %}
     <!-- Begin page -->
     <div id="layout-wrapper">
@@ -189,6 +190,11 @@
                         <li class="nav-item">
                             <a href="{% url 'accounts' %}" class="nav-link menu-link"> <i class="bi bi-cash-stack"></i>
                                 <span data-key="t-file-manager">Accounts</span> </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="{% url 'settings' %}" class="nav-link menu-link"> <i class="bi bi-gear"></i>
+                                <span data-key="t-kanaban-board">Settings</span> </a>
                         </li>
 
                         <li class="nav-item">
@@ -482,7 +488,7 @@
                             <div class="dropdown-menu dropdown-menu-end">
                                 <!-- item-->
                                 <h6 class="dropdown-header">Welcome User!</h6>
-                                <a class="dropdown-item fs-sm" href="#"><i
+                                <a class="dropdown-item fs-sm" href="/app/profile/"><i
                                         class="bi bi-person-circle text-muted align-middle me-1"></i> <span
                                         class="align-middle">Profile</span></a>
                                 <a class="dropdown-item fs-sm" href="#"><i
