--- a/assets/app-css/fees.css
+++ b/assets/app-css/fees.css
@@ -2,7 +2,9 @@
     padding-top: 7px;
     padding-left: 1.7rem;
     font-size: 1rem;
-    -webkit-appearance: menulist;
+}
+#getClassId{
+    height: 2.5rem;
 }
 .installment{
     margin-right: 1.5rem;
