Everyone's code done

--- a/app/templates/examinationInfo.html
+++ b/app/templates/examinationInfo.html
@@ -80,7 +80,9 @@
                         <!-- summary tab End -->
                         <div class="tab-pane" id="resultEntry" role="tabpanel">
                             <div class="row">
-                                <h6>Reslut</h6>
+                                <div class="col-md-12">
+                                    <p class="">Result</p>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6" id="uploadExcelColumn">
@@ -117,7 +119,7 @@
                                                 <thead class="thead-dark">
                                                     <tr>
                                                         <th>Student Name</th>
-                                                        <th>Student Name</th>
+                                                        <th>Roll Number</th>
                                                         <th>Obtained Marks</th>
                                                         <th>%</th>
                                                         <th>Grade</th>
