--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -187,10 +187,9 @@
                     
                     <div class="d-flex align-items-center justify-content-center">
                        <h5 class="mb-3 mt-4 fs-6 text-center">Current Subscription Plan: <span class="current-plan-text text-success">${planName} Package</span></h5>
-                        <button class="btn btn-success btn-label rounded-pill right mt-2 ms-4" data-bs-toggle="modal" data-bs-target="#subscriptionModal">
-                        Upgrade <i class="bi bi-arrow-up-circle align-middle fs-lg ms-2"></i>
-                    </button>
-
+                       <button type="button" class="btn btn-success btn-label rounded-pill right mt-2" data-bs-toggle="modal"
+                       data-bs-target="#subscriptionModal" id="upgradeBtn">
+                       <i class="bi bi-arrow-up-circle label-icon align-middle fs-lg ms-2"></i>Upgrade</button>
 
 
                     </div>
@@ -215,13 +214,100 @@
                         </div><br />
                     </div>
 
-                <div class="tab-pane" id="education" role="tabpanel">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h6>Education Years</h6>
+                    <div class="tab-pane" id="education" role="tabpanel">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-8 col-xl-8">
+                                <h6>Education Year</h6>
+                            </div>
+                            <div class="col text-end mb-3">
+                                <button type="button" class="btn btn-success btn-label rounded-pill right"
+                                    data-bs-toggle="modal" data-bs-target="#addeditYearModal">
+                                    <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Add
+                                    Year</button>
+                            </div>
+                        </div>
+
+                        <div class="modal fade bs-example-modal-md" id="addeditYearModal" tabindex="-1"
+                            role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-centered">
+                                <div class="modal-content" id="yearFormArea">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="mysmallModalLabel">Add Year</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <input type="hidden" name="education_year_id" id="education_year_id">
+                                    <div class="modal-body">
+                                        <div class="d-flex">
+                                            <div class="flex-shrink-0">
+                                                <i class="ri-checkbox-circle-fill text-success"></i>
+                                            </div>
+                                            <div class="flex-grow-1 ms-2">
+                                                <p class="text-muted mb-0">Empower the Future: Adding a New Chapter to Education with Latest Academic Year.</p>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex mt-2 row">
+                                            <div class="col-md-4">
+                                                <label class="form-label">Year Name</label>
+                                                <input type="text" class="form-control" id="education_year_name"
+                                                    name="education_year_name" placeholder=" Enter Year Name"
+                                                    maxlength="100" minlength="1">
+                                            </div>
+                                            <div class="col-md-4">
+                                                <label class="form-label">Start Date</label>
+                                                <input type="date" class="form-control" id="education_year_start_date"
+                                                    name="education_year_start_date">
+                                            </div>
+                                            <div class="col-md-4">
+                                                <label class="form-label">End Date</label>
+                                                <input type="date" class="form-control" id="education_year_end_date"
+                                                    name="education_year_end_date">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="javascript:void(0);" class="btn btn-link link-success fw-medium"
+                                            data-bs-dismiss="modal">
+                                            <i class="ri-close-line me-1 align-middle"></i> Close</a>
+                                        <button type="button" class="btn btn-primary" id="btnSaveYear"
+                                            name="btnSaveYear">Save</button>
+                                    </div>
+                                </div><!-- /.modal-content -->
+                            </div><!-- /.modal-dialog -->
+                        </div>
+
+                        <div class="row education-container">
+                            {% for education in education_data %}
+                            <div class="col-md-3" id="educationCard-{{ education.education_year_id }}">
+                                <div class="card card-body">
+                                    <div class="active-label-box position-absolute top-0 start-0 p-1 bg-success text-white"
+                                        id="statusLabel">
+                                        Active
+                                    </div>
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <img src="{% static 'img/year.gif' %}" alt="Calendar" class="calendar-gif">
+                                        <div class="flex-grow-1">
+                                            <h5 class="card-title mb-1 education_year_name">{{education.education_year_name}}</h5>
+                                            <p class="text-muted mb-0 education_year_start_date">Start Date: {{education.education_year_start_date}}</p>
+                                            <p class="text-muted mb-0 education_year_end_date">End Date: {{education.education_year_end_date}}</p>
+                                        </div>
+                                        <div class="d-flex flex-column gap-2">
+                                            <button type="button" data-id="{{education.education_year_id}}"
+                                                class="btn btn-sm btn-info btnYearEdit" id="btnYearEdit">
+                                                <i class="bi bi-pencil-square"></i>
+                                            </button>
+                                            <a href="#" data-id="{{education.education_year_id}}" class="dltBtn btn btn-sm btn-danger">
+                                                <i class="bi bi-trash3"></i>
+                                            </a>
+                                            <input type="checkbox" id="activeInactiveCheckbox"
+                                                class="form-check-input" onclick="toggleStatusLabel(this)">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endfor %}
                         </div>
                     </div>
-                </div>
             <div class="tab-pane" id="alerts" role="tabpanel">
                 <div class="row">
                   <div class="col-md-6">
