sprint_18 no demo

--- a/app/templates/attendance.html
+++ b/app/templates/attendance.html
@@ -92,25 +92,25 @@
                                 <div class="row">
                                     <div class="col text-end">
                                         <button type="button"
-                                            class="btn btn-success btn-label rounded-pill right"
+                                            class="btn btn-success btn-label rounded-pill right" id="btnStudentOpenForm"
                                             data-bs-toggle="modal" data-bs-target="#attedanceModal">
                                             <i
                                                 class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Take
                                             Attendance
                                         </button>
-                                        <button
+                                        {% comment %} <button
                                             class="btn btn-outline-primary rounded-pill btn-icon tripledots-dropdown-toggle"
                                             data-bs-toggle="dropdown" aria-expanded="false">
                                             <i class="bi bi-three-dots-vertical"></i>
-                                        </button>
-                                        <div class="input-group">
+                                        </button> {% endcomment %}
+                                        {% comment %} <div class="input-group">
                                             <ul class="dropdown-menu">
                                                 <li><a class="dropdown-item" href="#"><i
                                                             class="bi bi-upload me-2"></i> Import Bulk</a></li>
                                                 <li><a class="dropdown-item" href="#"><i
                                                             class="bi bi-download me-2"></i> Export CSV</a></li>
                                             </ul>
-                                        </div>
+                                        </div> {% endcomment %}
                                     </div>
                                 </div>
 
